# Level

./: .gitignore  CMakeLists.txt  setup.sh
.github\workflows/: cmake.yml
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
